--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>answer07-01</title>
+        <title>ajax Book editor</title>
         <h:outputStylesheet name="mystyle.css" library="css" />
     </h:head>
     <h:body>
